tests/ui/feature-gates/feature-gate-abi-avr-interrupt.stderr
error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:11:8
   |
LL | extern "avr-non-blocking-interrupt" fn fu() {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:13:8
   |
LL | extern "avr-interrupt" fn f() {}
   |        ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:17:12
   |
LL |     extern "avr-interrupt" fn m();
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:19:12
   |
LL |     extern "avr-non-blocking-interrupt" fn mu();
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:22:12
   |
LL |     extern "avr-interrupt" fn dm() {}
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:24:12
   |
LL |     extern "avr-non-blocking-interrupt" fn dmu() {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:30:12
   |
LL |     extern "avr-interrupt" fn m() {}
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:32:12
   |
LL |     extern "avr-non-blocking-interrupt" fn mu() {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:37:12
   |
LL |     extern "avr-interrupt" fn im() {}
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:39:12
   |
LL |     extern "avr-non-blocking-interrupt" fn imu() {}
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:43:18
   |
LL | type TA = extern "avr-interrupt" fn();
   |                  ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:45:19
   |
LL | type TAU = extern "avr-non-blocking-interrupt" fn();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:48:8
   |
LL | extern "avr-interrupt" {}
   |        ^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error[E0658]: avr-interrupt and avr-non-blocking-interrupt ABIs are experimental and subject to change
  --> $DIR/feature-gate-abi-avr-interrupt.rs:50:8
   |
LL | extern "avr-non-blocking-interrupt" {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69664 <https://github.com/rust-lang/rust/issues/69664> for more information
   = help: add `#![feature(abi_avr_interrupt)]` to the crate attributes to enable

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0658`.
